Add column configuration button to task list, process list and project list pages

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -915,6 +915,20 @@ main i.fa {
     width: 100%;
 }
 
+.configure-columns-button {
+    display: inline-block !important;
+    margin-right: 16px;
+}
+
+.configure-columns-button .ui-selectcheckboxmenu-label::after {
+    font-family: 'FontAwesome';
+    content: '\f0db';
+}
+
+.configure-columns-button .ui-selectcheckboxmenu-trigger {
+    display: none;
+}
+
 /*----------------------------------------------------------------------
 Metadata Editor
 ----------------------------------------------------------------------*/
