--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <h:form id="processesForm">
         <p:dataTable id="processesTable" var="process" value="#{ProcessForm.lazyDTOModel}"
@@ -23,13 +24,20 @@
                      paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                      paginatorPosition="bottom">
             <p:column styleClass="checkboxListColumn" selectionMode="multiple"/>
-            <p:column id="titleColumn" headerText="#{msgs.processTitle}" filterBy="#{process.title}">
+            <p:column id="titleColumn"
+                      headerText="#{msgs.processTitle}"
+                      filterBy="#{process.title}"
+                      rendered="#{fn:contains(fn:join(ProcessForm.selectedColumns, '-'), 'processTitle')}">
                 <h:outputText value="#{process.title}"/>
             </p:column>
-            <p:column id="progressColumn" styleClass="progressColumn" headerText="#{msgs.status}">
+            <p:column id="progressColumn"
+                      styleClass="progressColumn"
+                      headerText="#{msgs.status}"
+                      rendered="#{fn:contains(fn:join(ProcessForm.selectedColumns, '-'), 'processState')}">
                 <ui:include src="/WEB-INF/templates/includes/processes/progressColumn.xhtml"/>
             </p:column>
-            <p:column headerText="#{msgs.project}">
+            <p:column headerText="#{msgs.project}"
+                      rendered="#{fn:contains(fn:join(ProcessForm.selectedColumns, '-'), 'processProject')}">
                 <h:outputText value="#{process.project.title}"/>
             </p:column>
             <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
