--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/docketList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable id="docketTable"
                  var="item"
@@ -25,11 +26,13 @@
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
 
-        <p:column headerText="#{msgs.title}">
+        <p:column headerText="#{msgs.title}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'docketTitle')}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.file}">
+        <p:column headerText="#{msgs.file}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'docketFilename')}">
             <h:outputText value="#{item.file}"/>
         </p:column>
 
