--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/projectList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable var="item"
                  value="#{ProjectForm.lazyDTOModel}"
@@ -32,15 +33,15 @@
             <p:rowToggler/>
         </p:column>
 
-        <p:column headerText="#{msgs.title}">
+        <p:column headerText="#{msgs.title}" rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'projectTitle')}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.metsRightsOwner}">
+        <p:column headerText="#{msgs.metsRightsOwner}" rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'projectMetsRightsOwner')}">
             <h:outputText value="#{item.metsRightsOwner}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.active}" styleClass="checkboxColumn">
+        <p:column headerText="#{msgs.active}" styleClass="checkboxColumn" rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'projectActive')}">
             <h:outputText>
                 <ui:fragment rendered="#{item.isActive()}">
                     <i class="fa fa-check-square-o fa-lg checkbox-checked"/>
