--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/rulesetList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable id="rulesetTable"
                  var="item"
@@ -25,15 +26,21 @@
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
 
-        <p:column headerText="#{msgs.title}">
+        <p:column headerText="#{msgs.title}"
+                  sortBy="#{item.title}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'rulesetTitle')}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.file}">
+        <p:column headerText="#{msgs.file}"
+                  sortBy="#{item.file.keyword}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'rulesetFilename')}">
             <h:outputText value="#{item.file}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.metadataSortByRuleset}" styleClass="checkboxColumn" style="width: initial">
+        <p:column headerText="#{msgs.metadataSortByRuleset}" styleClass="checkboxColumn" style="width: initial"
+                  sortBy="#{item.orderMetadataByRuleset}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'rulesetSorting')}">
             <ui:fragment rendered="#{item.orderMetadataByRuleset}">
                 <i class="fa fa-check-square-o fa-lg checkbox-checked"/>
             </ui:fragment>
