--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:o="http://omnifaces.org/ui"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable id="templateTable"
@@ -33,8 +34,15 @@
             <p:rowToggler/>
         </p:column>
 
-        <p:column headerText="#{msgs.title}">
+        <p:column headerText="#{msgs.title}"
+                  sortBy="#{item.title}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'templateTitle')}">
             <h:outputText value="#{item.title}"/>
+        </p:column>
+
+        <p:column headerText="#{msgs.ruleset}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'templateRuleset')}">
+            <h:outputText value="#{item.ruleset.title}"/>
         </p:column>
 
         <p:column headerText="#{msgs.actions}" styleClass="actionsColumn">
