--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/workflowList.xhtml
@@ -15,6 +15,7 @@
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:fn="http://xmlns.jcp.org/jsp/jstl/functions"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable id="workflowTable"
                  var="item"
@@ -25,19 +26,27 @@
                  paginatorTemplate="{FirstPageLink} {PreviousPageLink} {CurrentPageReport} {NextPageLink} {LastPageLink}"
                  paginatorPosition="bottom">
 
-        <p:column headerText="#{msgs.title}">
+        <p:column headerText="#{msgs.title}"
+                  sortBy="#{item.title.keyword}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'workflowTitle')}">
             <h:outputText value="#{item.title}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.filename}">
+        <p:column headerText="#{msgs.filename}"
+                  sortBy="#{item.fileName.keyword}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'workflowFilename')}">
             <h:outputText value="#{item.fileName}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.active}">
+        <p:column headerText="#{msgs.active}"
+                  sortBy="#{item.active}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'workflowActive')}">
             <h:outputText value="#{item.active}"/>
         </p:column>
 
-        <p:column headerText="#{msgs.ready}">
+        <p:column headerText="#{msgs.ready}"
+                  sortBy="#{item.ready}"
+                  rendered="#{fn:contains(fn:join(ProjectForm.selectedColumns, '-'), 'workflowReady')}">
             <h:outputText value="#{item.ready}"/>
         </p:column>
 
