Make metadata area scrollable

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1118,6 +1118,10 @@ Metadata Editor
     overflow: hidden;
 }
 
+#metadataPanel {
+    overflow-y: scroll;
+}
+
 #galleryPanel {
     height: 100%;
 }
