--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processes/processList.xhtml
@@ -40,6 +40,14 @@
                       rendered="#{fn:contains(fn:join(ProcessForm.selectedColumns, '-'), 'processProject')}">
                 <h:outputText value="#{process.project.title}"/>
             </p:column>
+            <!-- columns for process properties that have been configured in kitodo config file! -->
+            <p:columns value="#{ProcessForm.getProcessPropertyNames()}"
+                       var="propertyName"
+                       headerText="#{propertyName}"
+                       sortBy="#{ProcessForm.getPropertyValue(process, propertyName)}"
+                       rendered="#{fn:contains(fn:join(ProcessForm.selectedColumns, '-'), propertyName)}">
+                <h:outputText value="#{ProcessForm.getPropertyValue(process, propertyName)}"/>
+            </p:columns>
             <p:column styleClass="actionsColumn" headerText="#{msgs.actions}">
                 <h:link id="viewProcess" outcome="processEdit" title="#{msgs.processView}"
                         rendered="#{SecurityAccessController.hasAuthorityToViewProcess() and not SecurityAccessController.hasAuthorityToEditProcess()}">
