--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -1295,13 +1295,12 @@ footer {
     margin-right: 10px;
 }
 
-/* TODO: style needs to be adjusted */
 .ui-datatable tr th.checkboxListColumn {
     padding-left: 7px;
     height: 35px;
     padding-top: 3px;
     margin-top: -5px;
-    vertical-align: top;
+    vertical-align: inherit;
 }
 
 .ui-datatable tr th.checkboxListColumn,
